<resources>
    <string name="app_name">agriapp</string>
    <string name="button1">Button1</string>
    <string name="button3">Button3</string>
    <string name="farmerlogin">Login 1</string>
    <string name="consumerlogin">Login 2</string>
    <string name="partnerxlogin">Partner Login</string>
    <string name="consumerxlogin">Consumer Login</string>
    <string name="farmerxlogin">Farmer Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
</resources>